# QiLinOS

./: .gitignore  README.md  TODO  a2a_host.py  agent.py  app.py  env_example  main.py  mcp_host.py  mcp_host_api.md  pyproject.toml  requirements.txt  test.py  ~$$记忆精准遗忘流程.~vsdx  新建文本文档.txt
a2a_server/: agent.py  agent_executor.py  pyproject.toml
autofill/analyzers/: __init__.py  form_analyzer.py
autofill/config/: __init__.py  settings.py
autofill/core/: __init__.py
autofill/fillers/: __init__.py  auto_filler.py  document_writer.py  field_filler.py  lightrag_form_filler.py  lightrag_triplet_filler.py  strategy_filler.py  template_filler.py  types.py
autofill/llm/: __init__.py  analyzers.py  base.py  deepseek_client copy.py  deepseek_client.py  local_llm_client.py  prompt_manager.py
autofill/parsers/: __init__.py  doc_parser.py  document_factory.py  enhanced_pdf_parser.py  excel_parser.py  pdf_parser.py  qwen_pdf_parser.py  text_parser.py
autofill/utils/: __init__.py  logger.py
autofill/validators/: __init__.py  business_validator.py  data_validator.py  field_validator.py  form_validator.py  types.py
config/: settings.json  threat_patterns.json
docs/: hermes_kylin_embedding_plan.md  kylin_embedding_sdk_guide.md  nex_agent_mem0_deploy - 副本.md  nex_agent_mem0_deploy.md  nex_agent_mem0_plan.md  nex_agent_mem0_selfhosted.md
kylin-actuator/: .gitignore  CMakeLists.txt  README.md
kylin-actuator/res/: com.kylin.actuator.conf  com.kylin.actuator.limit  com.kylin.actuator.limit.verify  com.kylin.actuator.service  控制面板功能实现整理.xlsx
kylin-actuator/src/: actuator.cpp  actuator.h  actuatormain.cpp  dbusclient.cpp  dbusclient.h  dbusmain.cpp  instructionlist.cpp  instructionlist.h  instructionset.cpp  instructionset.h  linkdialog.cpp  linkdialog.h  pubdef.cpp  pubdef.h  usd_global_define.h
kylin-actuator/tools/: install.sh  make-deb.sh
logs/: mcp_host.log.jsonl
mcp_server/: client.py  servers_registry.json
mcp_server/mcp_host/: api_agent.py  api_servers.py  api_ui.py  app.py  audit_log.py  constants.py  generate_mcp_config.py  llm_deepseek.py  mcp_client.py  mcp_config.py  models.py  registry_manager.py  runtime.py  test.py
mcp_server/server/: api_server.py  bdmap_server.py  filesystem_server.py  gdmap_server.py  hermes_bridge.py  kylin_desktop_control_server.py  kylin_sdk_server.py  kylin_server.py  local_server.py  servers_description.json
mcp_server/server/core/: enums.py
mcp_server/static/css/: app.css
mcp_server/static/js/: app.js
mcp_server/templates/: index.html
ocr_tool/: CMakeLists.txt  main.cpp
src/: workflow_stream.py
src/agent/: __init__.py  graph.py  llm.py  nodes.py  types.py
src/config/: __init__.py  agents.py  env.py
src/crawler/: jina_client.py
src/memory/: __init__.py  kylin_embedder.py  kylin_mem0_adapter.py  kylin_vectordb.py  mem0_kylin_embedder.py  mem0_store.py  memory_lifecycle.py  threat_patterns.py
src/prompts/: browser_zh.md  coder_zh.md  conversationalist_zh.md  coordinator_zh.md  file_manager_zh.md  form_filler_zh.md  knowledge_manager_zh.md  ocr_tool_zh.md  pic_maker_zh.md  planner_zh.md  ppt_generator_zh.md  reporter_zh.md  researcher_zh.md  supervisor_zh.md  template.py  ui_automator_zh.md
src/rag/: kylin_embedding.py  kylin_embedding_onnx.py  kylin_embedding_sdk.py  kylin_image_embedding.py  ps_rag.py
src/tools/: UI_assistant.py  __init__.py  autoppt.py  bash_tool.py  browser.py  crawl.py  decorators.py  file_management.py  formcache.py  formfiller.py  km.py  ocr_tool.py  python_repl.py  search.py  search_bing.py  text2image.py  userprofile.py  web_search.py
src/tools/templates/: academic_template.pptx  description.txt
src/utils/: __init__.py  ckpt_manager.py  db_manager copy.py  db_manager.py  db_manager_memory.py  db_manager_queue.py  eventbus.py  file_process.py  interupt.py  msg_process.py
test/: clean_all.py  db_manager.py  reset_database.py  test_a2a.py  test_autofill.py  test_browser.py  test_ds.py  test_get_models.py  test_health.py  test_intr.py  test_intr_proc.py  test_intr_thread.py  test_invoke.py  test_lightrag.py  test_llm.py  test_mcp.py  test_msg_process.py  test_ocr.py  test_re_gen_image.py  test_search.py  test_search_baiodu.py  test_text2image.py  test_workflow.py
test-data/: bank_account_form.txt  create_demo_files.py  create_demo_forms.py  create_test_files.py  demo_form.docx  demo_form.txt  demo_form.xlsx  job_application_form.txt  neirong.docx  p2.txt  test-inputs  training_registration_form.txt
uploads/: keyboard_mouse_power_report.md  system_hardware_report.txt  周报.txt
