[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nex-aget"
version = "0.1.0"
description = "NexAgent project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp",
    "baidusearch",
    "browser-use",
    "chardet",
    "clock",
    "decorators",
    "dotenv",
    "fastapi",
    "flask",
    "httpx[socks]",
    "json_repair",
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain-deepseek",
    "langchain-experimental",
    "langchain-google-genai",
    "langchain-openai",
    "langchain-text-splitters",
    "langgraph",
    "langgraph-checkpoint",
    "langgraph-checkpoint-sqlite",
    "langgraph-prebuilt",
    "lightrag-hku[api]",
    "markdownify",
    "mcp",
    "mcp-cli",
    "mysql-connector-python",
    "numpy",
    "openpyxl",
    "pandas",
    "pdfplumber",
    "pipmaster",
    "psutil",
    "python-docx",
    "python-dotenv",
    "python-pptx",
    "pymilvus",
    "qwen_vl_utils",
    "readabilipy",
    "socksio",
    "sse-starlette",
    "tenacity",
    "tiktoken",
    "trafilatura",
    "uvicorn",
    "watchdog",
    "yfinance",
    "torch",
    "dashscope",
    "xlrd",
    "PyPDF2",
    "crewai[tools]",
    "a2a-sdk[all]==0.3.11",
    "pydantic",
    "pillow",
    "click",
    "litellm",
    "asyncclick",
    "starlette",
    "httpx-sse",
    "jwcrypto",
    "pyjwt",
    "typing-extensions",
    "langchain-ollama>=1.1.0",
    "langchain-anthropic>=1.4.6",
    "langchain-cohere>=0.6.0",
    "langchain-huggingface>=1.2.2",
    "pyautogui>=0.9.54",
]

[project.optional-dependencies]
dev = [
    "black>=24.2.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/build/
'''
