[project]
name = "a2a-samples-image-gen"
version = "0.1.0"
description = "Generate or modify images using A2A and CrewAI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai[tools]>=0.95.0",
    "google-genai>=1.9.0",
    "a2a-sdk==0.3.11",
    "dashscope>=1.25.4",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "pillow>=11.3.0",
    "click>=8.2.1",
    "uvicorn>=0.35.0",
    "litellm>=1.74.9",
    "httpx[socks]>=0.28.1",
]
